métodos de un proyecto

--- a/src/app/vistas/login/login.component.html
+++ b/src/app/vistas/login/login.component.html
@@ -1,1 +1,490 @@
-<p>login works!</p>
+
+            <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+            <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+            <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+            <!------ Include the above in your HEAD tag ---------->
+
+
+            <div class="swal2-icon swal2-success swal2-animate-success-icon" style="display: flex;">
+             <div class="swal2-success-circular-line-left" style="background-color: rgb(255, 255, 255);"></div>
+               <span class="swal2-success-line-tip"></span>
+               <span class="swal2-success-line-long"></span>
+               <div class="swal2-success-ring"></div>
+               <div class="swal2-success-fix" style="background-color: rgb(255, 255, 255);"></div>
+               <div class="swal2-success-circular-line-right" style="background-color: rgb(255, 255, 255);"></div>
+              </div>
+
+
+              <div class="swal2-icon swal2-error swal2-animate-error-icon" style="display: flex;"><span class="swal2-x-mark"><span class="swal2-x-mark-line-left"></span><span class="swal2-x-mark-line-right"></span></span></div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<link
+  href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  rel="stylesheet"
+  id="bootstrap-css"
+/>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<link
+  rel="stylesheet"
+  href="https://use.fontawesome.com/releases/v5.0.8/css/all.css"
+/>
+
+<div class="container">
+  <br />
+  <br /><br />
+  <hr />
+
+  <div class="row">
+    <aside class="col-sm-4">
+      <p>Login form style 1</p>
+      <div class="card">
+        <article class="card-body">
+          <a href="" class="float-right btn btn-outline-primary">Sign up</a>
+          <h4 class="card-title mb-4 mt-1">Sign in</h4>
+          <form>
+            <div class="form-group">
+              <label>Your email</label>
+              <input
+                name=""
+                class="form-control"
+                placeholder="Email"
+                type="email"
+              />
+            </div>
+            <!-- form-group// -->
+            <div class="form-group">
+              <a class="float-right" href="#">Forgot?</a>
+              <label>Your password</label>
+              <input
+                class="form-control"
+                placeholder="******"
+                type="password"
+              />
+            </div>
+            <!-- form-group// -->
+            <div class="form-group">
+              <div class="checkbox">
+                <label> <input type="checkbox" /> Save password </label>
+              </div>
+              <!-- checkbox .// -->
+            </div>
+            <!-- form-group// -->
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block">
+                Login
+              </button>
+              <button
+                class="btn btn-lg btn-outline-primary btn-block"
+                type="submit"
+              >
+                <i class="fa fa-sign-in"></i> Login
+              </button>
+              <br />
+              <div class="form-group">
+                <input type="submit" class="btnSubmit" value="Login" />
+              </div>
+            </div>
+            <!-- form-group// -->
+          </form>
+        </article>
+      </div>
+      <!-- card.// -->
+    </aside>
+    <!-- col.// -->
+    <aside class="col-sm-4">
+      <p>Login form style 2</p>
+
+      <div class="card">
+        <article class="card-body">
+          <a href="" class="float-right btn btn-outline-primary">Sign up</a>
+          <h4 class="card-title mb-4 mt-1">Sign in</h4>
+          <p>
+            <a href="" class="btn btn-block btn-outline-info">
+              <i class="fab fa-twitter"></i>   Login via Twitter</a
+            >
+            <a href="" class="btn btn-block btn-outline-primary">
+              <i class="fab fa-facebook-f"></i>   Login via facebook</a
+            >
+          </p>
+          <hr />
+          <form>
+            <div class="form-group">
+              <input
+                name=""
+                class="form-control"
+                placeholder="Email or login"
+                type="email"
+              />
+            </div>
+            <!-- form-group// -->
+            <div class="form-group">
+              <input
+                class="form-control"
+                placeholder="******"
+                type="password"
+              />
+            </div>
+            <!-- form-group// -->
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <button type="submit" class="btn btn-primary btn-block">
+                    Login
+                  </button>
+                </div>
+                <!-- form-group// -->
+              </div>
+              <div class="col-md-6 text-right">
+                <a class="small" href="#">Forgot password?</a>
+              </div>
+            </div>
+            <!-- .row// -->
+          </form>
+        </article>
+      </div>
+      <!-- card.// -->
+    </aside>
+    <!-- col.// -->
+    <aside class="col-sm-4">
+      <p>Login form style 3</p>
+
+      <div class="card">
+        <article class="card-body">
+          <h4 class="card-title text-center mb-4 mt-1">Sign in</h4>
+          <hr />
+          <p class="text-success text-center">Some message goes here</p>
+          <form>
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fa fa-user"></i>
+                  </span>
+                </div>
+                <input
+                  name=""
+                  class="form-control"
+                  placeholder="Email or login"
+                  type="email"
+                />
+              </div>
+              <!-- input-group.// -->
+            </div>
+            <!-- form-group// -->
+            <div class="form-group">
+              <div class="input-group">
+                <div class="input-group-prepend">
+                  <span class="input-group-text">
+                    <i class="fa fa-lock"></i>
+                  </span>
+                </div>
+                <input
+                  class="form-control"
+                  placeholder="******"
+                  type="password"
+                />
+              </div>
+              <!-- input-group.// -->
+            </div>
+            <!-- form-group// -->
+            <div class="form-group">
+              <button type="submit" class="btn btn-primary btn-block">
+                Login
+              </button>
+            </div>
+            <!-- form-group// -->
+            <p class="text-center">
+              <a href="#" class="btn">Forgot password?</a>
+            </p>
+          </form>
+        </article>
+      </div>
+      <!-- card.// -->
+    </aside>
+    <!-- col.// -->
+  </div>
+  <!-- row.// -->
+</div>
+<!--container end.//-->
+
+<br /><br /><br />
+<!-- <article class="bg-secondary mb-3">
+<div class="card-body text-center">
+    <h4 class="text-white">HTML UI KIT <br> Ready to use Bootstrap 4 components and templates </h4>
+<p class="h5 text-white"> for Ecommerce, marketplace, booking websites
+and product landing pages</p>   <br>
+<p><a class="btn btn-warning" target="_blank" href="http://bootstrap-ecommerce.com/"> Bootstrap-ecommerce.com
+ <i class="fa fa-window-restore "></i></a></p>
+</div>
+<br><br><br>
+</article> -->
+
+<link
+  href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+  rel="stylesheet"
+  id="bootstrap-css"
+/>
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container login-container">
+
+  <div class="row">
+    <div class="col-md-6 login-form-1">
+      <div class="note">
+        <p>This is a simpleRegister Form made using Boostrap.</p>
+    </div>
+      <h3>Login for Form 1</h3>
+      <form>
+        <div class="form-group">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Your Email *"
+            value=""
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="password"
+            class="form-control"
+            placeholder="Your Password *"
+            value=""
+          />
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btnSubmit" value="Login" />
+        </div>
+        <div class="form-group">
+          <a href="#" class="ForgetPwd">Forget Password?</a>
+        </div>
+      </form>
+    </div>
+    <div class="col-md-6 login-form-2">
+      <h3>Login for Form 2</h3>
+      <form>
+        <div class="form-group">
+          <input
+            type="text"
+            class="form-control"
+            placeholder="Your Email *"
+            value=""
+          />
+        </div>
+        <div class="form-group">
+          <input
+            type="password"
+            class="form-control"
+            placeholder="Your Password *"
+            value=""
+          />
+        </div>
+        <div class="form-group">
+          <input type="submit" class="btnSubmit" value="Login" />
+        </div>
+        <div class="form-group">
+          <a href="#" class="ForgetPwd" value="Login">Forget Password?</a>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container register">
+                <div class="row">
+                    <div class="col-md-3 register-left">
+                        <img src="https://image.ibb.co/n7oTvU/logo_white.png" alt=""/>
+                        <h3>Welcome</h3>
+                        <p>You are 30 seconds away from earning your own money!</p>
+                        <input type="submit" name="" value="Login"/><br/>
+                    </div>
+                    <div class="col-md-9 register-right">
+                        <ul class="nav nav-tabs nav-justified" id="myTab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Employee</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Hirer</a>
+                            </li>
+                        </ul>
+                        <div class="tab-content" id="myTabContent">
+                            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                                <h3 class="register-heading">Apply as a Employee</h3>
+                                <div class="row register-form">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="First Name *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="password" class="form-control" placeholder="Password *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="password" class="form-control"  placeholder="Confirm Password *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <div class="maxl">
+                                                <label class="radio inline">
+                                                    <input type="radio" name="gender" value="male" checked>
+                                                    <span> Male </span>
+                                                </label>
+                                                <label class="radio inline">
+                                                    <input type="radio" name="gender" value="female">
+                                                    <span>Female </span>
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" placeholder="Your Email *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" minlength="10" maxlength="10" name="txtEmpPhone" class="form-control" placeholder="Your Phone *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <select class="form-control">
+                                                <option class="hidden"  selected disabled>Please select your Sequrity Question</option>
+                                                <option>What is your Birthdate?</option>
+                                                <option>What is Your old Phone Number</option>
+                                                <option>What is your Pet Name?</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Enter Your Answer *" value="" />
+                                        </div>
+                                        <input type="submit" class="btnRegister"  value="Register"/>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="tab-pane fade show" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                                <h3  class="register-heading">Apply as a Hirer</h3>
+                                <div class="row register-form">
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="First Name *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="Last Name *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="email" class="form-control" placeholder="Email *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" maxlength="10" minlength="10" class="form-control" placeholder="Phone *" value="" />
+                                        </div>
+
+
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="form-group">
+                                            <input type="password" class="form-control" placeholder="Password *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="password" class="form-control" placeholder="Confirm Password *" value="" />
+                                        </div>
+                                        <div class="form-group">
+                                            <select class="form-control">
+                                                <option class="hidden"  selected disabled>Please select your Sequrity Question</option>
+                                                <option>What is your Birthdate?</option>
+                                                <option>What is Your old Phone Number</option>
+                                                <option>What is your Pet Name?</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <input type="text" class="form-control" placeholder="`Answer *" value="" />
+                                        </div>
+                                        <input type="submit" class="btnRegister"  value="Register"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+
+
+
+
+
+
+
+
+
+
+            
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
